--- a/.artifacts/spec-tasks-T-02-01-graph-builder/metadata.yaml
+++ b/.artifacts/spec-tasks-T-02-01-graph-builder/metadata.yaml
@@ -117,7 +117,7 @@ worklog:
 
 metrics:
   estimated_hours: 40  # 5 days * 8 hours
-  actual_hours: 28.5  # Day 1: 2h, Day 2: 11h, Day 3: 2.5h, Day 4: 4h, Day 5: 9h (Session 1: 4h + Session 2: 5h)
+  actual_hours: 24.5  # Day 1: 2h, Day 2: 11h, Day 3: 2.5h, Day 4: 9h (Session 1: 4h + Session 2: 5h, both on 2025-10-28)
   lines_added: 5860   # Core: 2064 + Parity: 570 + Export: 817 + Multi-target: 186 + Refactoring: 2223 (Session 1: +186, Session 2: +2037)
   lines_deleted: 142   # Core: 26 + Parity: 14 + Export: 52 + Multi-target: 25 + Refactoring: 25
   files_modified: 30   # Core: 12 + Parity: 2 + Export: 1 + Multi-target: 2 + Refactoring: 13 (11 modules + 1 test + 1 action log)
@@ -139,10 +139,10 @@ comments:
     text: "Day 3 breakthrough: Import parity RESOLVED 🎉! Implemented comprehensive export tracking system with ModuleExports model, deferred attribute resolution, and wildcard import handling. Import edges now match LocAgent golden baseline exactly (218/218, 0% variance). Added 3 new unit tests. Invoke variance improved from -15.63% to +1.9%. Next: Mirror LocAgent's find_all_possible_callee to eliminate remaining invoke variance."
   - date: "2025-10-28"
     author: "Rust Dev 1"
-    text: "Day 4 multi-target alias resolution: Rewrote alias map to Vec<GraphNodeIndex> for multi-target support. Added resolve_targets() and PendingWildcardExport handling. New unit test confirms invoke edges now attach to all reachable alias candidates. Parity: imports still 0% ✅, but invokes increased to +6.4% (565 vs 531 - up from +1.9%). Root cause: multi-target resolution discovers more edges than LocAgent (e.g., auto_search_main.py::main → merge, batch_build_graph.py::run → setup_repo). Need to audit extra edges and align call resolution heuristics with LocAgent before next parity run."
+    text: "Day 4 Session 1 - Multi-target alias resolution: Rewrote alias map to Vec<GraphNodeIndex> for multi-target support. Added resolve_targets() and PendingWildcardExport handling. New unit test confirms invoke edges now attach to all reachable alias candidates. Parity: imports still 0% ✅, but invokes increased to +6.4% (565 vs 531 - up from +1.9%). Root cause: multi-target resolution discovers more edges than LocAgent (e.g., auto_search_main.py::main → merge, batch_build_graph.py::run → setup_repo). Session time: 4h."
   - date: "2025-10-28"
     author: "Rust Dev 1"
-    text: "Day 5 graph builder refactoring: Split monolithic builder.rs (1769 lines) into 10 focused modules for improved maintainability and multi-language support preparation (TypeScript v0.2.0, Go v0.3.0). Created: state.rs (458 lines), imports.rs (674 lines), behaviors.rs (195 lines - NEW), python/ast_utils.rs (645 lines). Fixed 3 compilation errors (incorrect re-export, missing EdgeRef import, unused imports). Verified with 6-phase plan: compilation ✅, structural verification ✅ (100% line coverage mapping, all 26 functions migrated, zero logic changes). Total: +2,037 lines across 11 files. Session 1 (4h) + Session 2 (5h) = 9h total. Cumulative: 28.5h / 40h estimated. Next: Audit extra invoke edges (variance +6.4% → target ≤2%), expand unit test coverage (30% → >80%)."
+    text: "Day 4 Session 2 - Graph builder refactoring: Split monolithic builder.rs (1769 lines) into 10 focused modules for improved maintainability and multi-language support preparation (TypeScript v0.2.0, Go v0.3.0). Created: state.rs (458 lines), imports.rs (674 lines), behaviors.rs (195 lines - NEW), python/ast_utils.rs (645 lines). Fixed 3 compilation errors (incorrect re-export, missing EdgeRef import, unused imports). Verified with 6-phase plan: compilation ✅, structural verification ✅ (100% line coverage mapping, all 26 functions migrated, zero logic changes). Total: +2,037 lines across 11 files. Session time: 5h. Day 4 total: 9h. Cumulative: 24.5h / 40h estimated. Next: Audit extra invoke edges (variance +6.4% → target ≤2%), expand unit test coverage (30% → >80%)."
 
 related_artifacts:
   - type: "parity_baseline"
